Notifications are no longer behind dialog.
But there arent any cases where notifications are shown when a dialog is open, it may be used when project settings validation gets implemented.

--- a/res/ui/notification/notification.css
+++ b/res/ui/notification/notification.css
@@ -4,6 +4,7 @@
     right: 20px;
     width: 350px;
     max-width: calc( 100vw - 40px);
+    z-index: 11;
 }
 
 #notifications>div {
